@@ -23,10 +23,10 @@
  * Teleports players from the Training Camp exit to the road to
  * Mushroom Town.
  *
- * @author GoldenKevin
+ * @author GoldenKevin (content from KiniroMS r227)
  */
 
 npc.sayNext("You have finished all your trainings. Good job. You seem to be ready to start with the journey right away! Good, I will let you move on to the next place.");
 npc.sayNext("But remember, once you get out of here, you will enter a village full with monsters. Well them, good bye!");
-npc.getClient().getPlayer().changeMap(40000);
+npc.warpPlayer(40000);
 npc.giveExp(3);
